plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "7.0.0"
    id 'info.solidsoft.pitest' version '1.6.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.17'
    id 'com.github.ben-manes.versions' version '0.39.0'
}

repositories {
    mavenCentral()
    jcenter()
    maven {
        url 'https://m2.dv8tion.net/releases'
        name 'm2-dv8tion'
    }
    maven { url 'https://jitpack.io' }


}


apply plugin: 'java'
apply plugin: 'idea'

mainClassName = "core.Chuu"

group 'org.ish'
version '1.1.0'
apply plugin: 'java'

sourceCompatibility = 17
targetCompatibility = 17


compileJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]

}
compileTestJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]

}
test {
    jvmArgs '--enable-preview'

}
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'


dependencies {
// https://mvnrepository.com/artifact/org.knowm.xchart/xchart
    implementation project(':model')
    implementation group: 'org.knowm.xchart', name: 'xchart', version: '3.8.1'
    implementation 'se.michaelthelin.spotify:spotify-web-api-java:6.5.4'

    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha10'


    implementation group: 'com.github.Walkyst', name: 'lavaplayer-fork', version: '3a54cbd43b2578ff6b2874b2545941ac29c14b02'

    // Audio
    implementation 'com.github.natanbc:lavadsp:0.7.7'
    implementation 'com.sedmelluq:lavaplayer-ext-youtube-rotator:0.2.3'
    implementation 'com.sedmelluq:jda-nas:1.1.0'

    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.4'

    implementation 'com.neovisionaries:nv-i18n:1.29'
    implementation 'com.github.ishwi:java-eval:8de726df14c18523912aa6ff21bfd1b0b7d54924'
    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
//    implementation("net.dv8tion:JDA:4.3.0_339")
    implementation("com.github.DV8FromTheWorld:JDA:0899a4483f81de0d378675ef2911cfd2787d4da7")

    implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.2'

    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'org.json', name: 'json', version: '20210307'
    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.116'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.7.0'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.7.0'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-webp', version: '3.7.0'
    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.14'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-codec', version: '1.14'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-svggen', version: '1.14'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0'
    implementation 'com.vdurmont:emoji-java:5.1.1'
// https://mvnrepository.com/artifact/com.opencsv/opencsv
    implementation 'org.apache.commons:commons-csv:1.9.0'


    // TEST
// https://mvnrepository.com/artifact/org.awaitility/awaitility
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.1.0'
    testImplementation group: 'com.openpojo', name: 'openpojo', version: '0.9.1'

// https://mvnrepository.com/artifact/org.ow2.asm/asm
    testImplementation group: 'org.ow2.asm', name: 'asm', version: '9.2'

// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-core
    testImplementation group: 'org.graphwalker', name: 'graphwalker-core', version: '4.3.1'
// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-java
    // group: 'org.graphwalker', name: 'graphwalker-java', version: '4.1.0'

// https://mvnrepository.com/artifact/com.pholser/junit-quickcheck-core
    //a
    testImplementation group: 'com.pholser', name: 'junit-quickcheck-core', version: '1.0'
    testImplementation "org.mockito:mockito-core:3.12.4"
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'

    testImplementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.33'
    testAnnotationProcessor group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.33'


}

tasks.withType(JavaCompile).configureEach {
    options.fork = true
}
